RESOLVED FIXED134699
Nearly everything in the UIProcess "leaks" when WKWebView is torn down
https://bugs.webkit.org/show_bug.cgi?id=134699
Summary Nearly everything in the UIProcess "leaks" when WKWebView is torn down
Tim Horton
Reported 2014-07-07 15:37:59 PDT
WKWebView doesn't adopt its WKView, thus resulting in the WebPageProxy, WebProcessProxy, and other friends hanging around forever.
Attachments
patch (1.39 KB, patch)
2014-07-07 15:38 PDT, Tim Horton
no flags
Radar WebKit Bug Importer
Comment 1 2014-07-07 15:38:19 PDT
Tim Horton
Comment 2 2014-07-07 15:38:59 PDT
Simon Fraser (smfr)
Comment 3 2014-07-07 15:40:18 PDT
Comment on attachment 234522 [details] patch I wish we could make this not compile.
Darin Adler
Comment 4 2014-07-07 16:16:06 PDT
(In reply to comment #3) > I wish we could make this not compile. It’s called “ARC”. Also, we could add check-webkit-style rules to catch this.
WebKit Commit Bot
Comment 5 2014-07-07 16:18:45 PDT
Comment on attachment 234522 [details] patch Clearing flags on attachment: 234522 Committed r170859: <http://trac.webkit.org/changeset/170859>
WebKit Commit Bot
Comment 6 2014-07-07 16:18:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.