Nearly everything in the UIProcess "leaks" when WKWebView is torn down https://bugs.webkit.org/show_bug.cgi?id=134699 <rdar://problem/17581777>

Reviewed by Simon Fraser.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView initWithFrame:configuration:]):
Adoption is important!


Canonical link: https://commits.webkit.org/152658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170859 268f45cc-cd09-0410-ab3c-d52691b4dbfc